2008-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkAction.t
	* xs/GtkAction.xs: Don't sink the widgets returned by
	gtk_action_get_proxies.  This fixes the problems with using
	Gtk2::Action::get_proxies in the "connect-proxy" signal.  Patch by
	Kevin Ryde.

	* api.pod (Memory Handling): Explain the lifespan issues
	associated with Glib::Boxed.  Patch by Kevin Ryde.

	* xs/GtkWidget.xs: Mention that the objects returned by
	requisition() and allocation() are only valid as long as the
	widget lives (unless they are copied).

2008-10-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkRgb.xs (SvImageDataPointer): Add a return statement even
	if it cannot be reached, to hush compiler warnings.

	* t/version-checks.t: Use -init instead of -threads-init in the
	version check tests to avoid issues on systems with a glib without
	thread support.

	* t/GtkTreeView.t: Skip the set_search_equal_func() test when gtk+
	< 2.10 since the test uses and needs set_search_entry().  Fix the
	skip count for the set_search_position_func() test.

	* t/00.Gtk2.t: Print version information to aid in debugging test
	failure reports.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.200.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* api.pod: Improve the explanation of callbacks and user data.
	Patch by Kevin Ryde.

2008-09-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeModelIface.t
	* xs/GtkTreeSortable.xs: Fix a stack handling bug in
	Gtk2::TreeSortable::get_sort_column_id.

	* t/GtkCellLayoutIface.t
	* xs/GtkCellLayout.xs: Fix a stack handling bug in
	Gtk2::CellLayout::get_cells.

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Fix yet another stack handling bug in
	Gtk2::TreeModel::get.  Patch by Kevin Ryde.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.193.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
