@@ -1,5 +1,8 @@
 2008-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* xs/GtkObject.xs (gtk2perl_new_gtkobject): Make the debugging
+	code cope with NULL objects.
+
 	* t/GtkAction.t
 	* xs/GtkAction.xs: Don't sink the widgets returned by
 	gtk_action_get_proxies.  This fixes the problems with using
